Added all possible filder downloadLosses, and the corresponding test.
